# termcolor2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  poac.yml
.github/workflows/: ccpp.yml
examples/: basic.cpp  constant.cpp
include/termcolor2/: alias.hpp  char_traits.hpp  comparison.hpp  concat.hpp  io.hpp  literals.hpp  presets.hpp  string.hpp  termcolor2.hpp  to_color.hpp
tests/: CMakeLists.txt  char_traits.cpp  comparison.cpp  concat.cpp  gnu_literals.cpp  io.cpp  literals.cpp  min.cpp  string.cpp  to_color.cpp
